# google-photos-icloud-migration

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AUTHENTICATION_GUIDE.md  AUTOMATED_SETUP.md  CHANGELOG.md  CLEANUP_COMPLETE.md  CLEANUP_RECOMMENDATIONS.md  CLEANUP_REPORT.md  CLONE_FROM_GITHUB.md  CLOUD_SETUP_GUIDE.md  COMPLETE_INSTALLATION_GUIDE.md  CONFIG_EDITOR_GUIDE.md  CONTRIBUTING.md  DELETE_PHOTOS_GUIDE.md  DEVELOPMENT.md  DISK_SPACE_LIMIT_GUIDE.md  DOCUMENTATION_REVIEW_SUMMARY.md  FILE_REVIEW.md  GCP_SETUP.md  GET_HELPERS_ON_VM.md  GET_SETUP_SCRIPT.md  GOOGLE_DRIVE_OAUTH_SETUP.md  HYBRID_TERMINAL_DISPLAY_PLAN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INSTALL_DEVELOPER_TOOLS.md  LAUNCHER_GUIDE.md  LOGGING_AND_RESUMPTION_ANALYSIS.md  MACBOOK_CHECKLIST.md  MACOS_SETUP_GUIDE.md  MAC_TERMINAL_SETUP.md  MERGE_STRATEGY.md  Makefile  NEXT_STEPS_EXECUTION.md  PERFORMANCE_ANALYSIS.md  PHASE_3_COMPLETION.md  (+99 more)
.cursor/: cloud-agent-prompt.md  cloud-test-agent.md  environment.json
.github/: REPO_DESCRIPTION.md  dependabot.yml
.github/workflows/: lint.yml  pre-commit.yml  test.yml
docker/: Dockerfile  docker-compose.yml
docs/: COMPLETE_INSTALLATION_GUIDE.md  CONTRIBUTING.md  DEVELOPMENT.md  MACBOOK_CHECKLIST.md  Makefile  QUICKSTART.md  SCREENSHOTS.md  TESTING.md  api.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  quickstart.rst  usage.rst
docs/_static/: .gitkeep
docs/_templates/: .gitkeep
docs/api/: config.rst  downloader.rst  exceptions.rst  parser.rst  processor.rst  uploader.rst  utils.rst
docs/images/: .gitkeep  README.md
google_photos_icloud_migration/: __init__.py  config.py  exceptions.py  orchestrator.py
google_photos_icloud_migration/cli/: __init__.py  main.py
scripts/: __init__.py  auth_setup.py  check-auth-status.py  check_dependencies.py  check_terminal_permission.py  fix_photos_permission.sh  generate_lock_files.sh  generate_lockfile.py  grant_photos_permission.sh  main.py  process_local_folders.py  process_local_zips.py  recover-config.sh  report_generator.py  run_security_audit.sh  set_github_repo_info.py  setup-macbook.sh  test_all_branches.sh  test_branch.sh  verify-oauth-setup.py  verify-setup.py
tests/: __init__.py  conftest.py  example_test.py  test_album_parser.py  test_config_validation.py  test_drive_downloader.py  test_extractor.py  test_health_check.py  test_icloud_uploader.py  test_main.py  test_metadata_merger.py  test_security.py  test_state_manager.py  test_utils.py
tests/fixtures/: sample_metadata.json
utils/: __init__.py  parallel.py  retry.py
vm_chunks/: INSTRUCTIONS.txt  PASTE-THESE-COMMANDS.txt  chunk_aa.txt  chunk_ab.txt  chunk_ac.txt  chunk_ad.txt  chunk_ae.txt  chunk_af.txt  copy-chunks.sh  generate-paste-commands.sh  reassemble.sh
web/: QUICKSTART.md  README.md  __init__.py  app.py
(+32 files in other folders)
